--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-utils-hooks",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [
     "react",
@@ -13,6 +14,19 @@
   "author": "mrliang",
   "license": "ISC",
   "dependencies": {
-    "react": "^17.0.1"
+    "lodash": "^4.17.20",
+    "react": "^16.8.0",
+    "typescript": "^4.1.2"
+  },
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brownbo/react-utils-hooks.git"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.165",
+    "@types/react": "^17.0.0"
   }
 }
