--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-utils-hooks",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.ts",
   "scripts": {
@@ -9,13 +9,13 @@
   },
   "keywords": [
     "react",
-    "hooks"
+    "hooks",
+    "utils"
   ],
   "author": "mrliang",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.20",
-    "react": "^16.8.0",
     "typescript": "^4.1.2"
   },
   "files": [
